# risk-tool

./: .cursorignore  .dockerignore  .env.docker.template  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMMANDS.md  DATA.md  DEPLOYMENT.md  Dockerfile  EMAIL_TROUBLESHOOTING.md  ENHANCED_DEPLOYMENT_SUMMARY.md  FINAL_DELIVERY_SUMMARY.md  FINAL_MODEL_RESULTS.md  FINAL_PRODUCTION_READINESS_REPORT.md  FINAL_STATUS.md  Makefile  PRODUCTION_READINESS_REPORT.md  PRODUCTION_SETUP.md  README.md  REFACTORED_ARCHITECTURE.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.md  REPORT.md  WORKFLOW_GUIDE.md  activate_env.sh  additional_analysis.py  analysis.ipynb  analysis_report.py  analyze_performance.py  analyze_risk_scores.py  causal_impact_analysis.py  check_database.py  comprehensive_analysis.py  comprehensive_results_analysis.py  config.py  config.yaml  copy_models_and_optimize.py  (+54 more)
.claude/: settings.json  settings.local.json
config/: config.yaml  email_template.html  model_configs.yaml  risk_limits.yaml  trader_accounts.yaml  traders.yaml
configs/: main_config.yaml
core/: __init__.py  analysis.py  config.py  main_pipeline.py  production_pipeline.py  simple_signals.py
docker/: crontab  entrypoint.sh
docs/: ANALYSIS.md  analytics_interpretation_guide.md  quick_referenc_card.md
examples/: __init__.py  advanced_causal_demo.py  advanced_feature_demo.py  causal_impact_demo.py  email_service_demo.py  essential_feature_demo.py  feature_engineering_demo.py  modeling_demo.py  using_refactored_code.py
exports/: validation_quick_reference.txt  validation_summary.json
inference/: README.md  __init__.py  email_service.py  signal_generator.py
notebooks/: 00-data-validation.ipynb  01-EDA-for-feature-engineering.ipynb  01_data_validation.ipynb  02_model_evaluation.ipynb  analysis.ipynb  db_preview.ipynb  debug.ipynb  example_usage.ipynb  feature_exploration.ipynb  prepare_fills.ipynb  prepare_totals_by_date.ipynb  risk_mvp_lgbm.ipynb  trading_mvp copy.ipynb
reports/: causal_impact_summary.txt  comprehensive_validation_report.json  enhanced_evaluation_results.json  enhanced_evaluation_results_20250826_164555.json  feature_drift_details.csv  feature_drift_report.txt  feature_importance_change_loss.csv  feature_importance_change_var.csv  monitoring_dashboard_data.json  performance_comparison_20250826_160432.json  performance_comparison_20250826_160432.md  performance_summary.csv
scripts/: authenticate.py  (+21 more)
(+350 files in other folders)
