[tool.poetry]
name = "risk-tool"
version = "0.1.0"
description = "A risk-management toolkit for trading"
authors = ["Temurbek temurbekkhujaev@gmail.com"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.0"
numpy = "^2.2.0"
scipy = "^1.10"
scikit-learn = "^1.3"
python-dotenv = "^1.0"
jupyter = "^1.1.1"
matplotlib = "^3.10.1"
lightgbm = "^4.6.0"
ipykernel = "^6.29.5"
notebook = "^7.4.1"
shap = "^0.46"

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^24.3"
isort = "^6.0"
flake8 = "^7.0"
mypy = "^1.4"
pre-commit = "^4.2"
types-requests = "^2.32.0.20250328"

[tool.poetry.scripts]
data-download = "data_download:main"
data-load     = "data_load:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 120