[project]
name = "risk-tool"
version = "0.1.0"
description = "Quantitative Risk Management Tool for Trading Operations"
authors = [
    {name = "Temurbek Khujaev", email = "temurbekkhujaev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.3.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=3.3.5",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "joblib>=1.3.0",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
    "pytz>=2023.3",
    "streamlit==1.28.0",
    "altair==4.2.2",
    "requests>=2.25.0",
    "watchdog>=6.0.0",
    "protobuf>=4.25.0",
    "pyarrow>=19.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "shap>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "build/",
    "dist/",
]
